--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: ave_turismo_app
-description: "Plataforma de aviturismo y reservas naturales de Nicaragua"
+name: la_gata_app
+description: "Sistema de facturación para licorería La Gata"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
