--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   shared_preferences: ^2.2.2
   url_launcher: ^6.2.2
   uuid: ^4.2.1
+  connectivity_plus: ^5.0.2
   
   # Notifications (comentado temporalmente)
   # flutter_local_notifications: ^16.3.0
