feat: Actualizar dependencias y mejorar la estructura del proyecto
- Actualizar versiones de paquetes en pubspec.lock, incluyendo leak_tracker y vector_math.
- Añadir soporte para Material Design Icons en pubspec.yaml.
- Implementar configuración de fuentes para la web en pubspec.yaml.
- Eliminar archivos obsoletos de configuración y modelos no utilizados.
- Añadir nuevos modelos y servicios para la gestión de proveedores y detalles de productos.
- Mejorar la estructura de las páginas de compras y proveedores, incluyendo nuevas funcionalidades.
- Optimizar el diseño y la responsividad de varias páginas y widgets en la aplicación.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
 
   # UI & Icons
   cupertino_icons: ^1.0.8
+  material_design_icons_flutter: ^7.0.7296
 
   # State Management
   provider: ^6.1.1
@@ -64,3 +65,17 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+
+flutter:
+  # The following line ensures that the Material Icons font is
+  # included with your application, so that you can use the icons in
+  # the material Icons class.
+  uses-material-design: true
+  
+  # Fonts configuration for web
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto-Bold.ttf
+          weight: 700
