--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "my_app",
-    "short_name": "my_app",
+    "name": "La Gata - Sistema de Facturación",
+    "short_name": "La Gata",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Sistema de facturación para licorería La Gata",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
