--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   intl: ^0.18.1
   url_launcher: ^6.2.2
   uuid: ^4.2.1
+  flutter_dotenv: ^5.1.0
 
   # PDF Generation
   pdf: ^3.10.7
@@ -71,6 +72,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  
+  # Assets
+  assets:
+    - .env
+    - web/assets/.env
   
   # Fonts configuration for web
   fonts:
